--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,68 @@
+attrs==19.3.0
+backcall==0.1.0
+bleach==3.1.3
 certifi==2019.11.28
 chardet==3.0.4
+colorama==0.4.3
+cycler==0.10.0
+decorator==4.4.2
+defusedxml==0.6.0
+entrypoints==0.3
+et-xmlfile==1.0.1
 idna==2.9
+importlib-metadata==1.5.1
+ipykernel==5.2.0
+ipython==7.13.0
+ipython-genutils==0.2.0
+jdcal==1.4.1
+jedi==0.16.0
+Jinja2==2.11.1
+joblib==0.15.1
+json5==0.9.3
+jsonschema==3.2.0
+jupyter-client==6.1.1
+jupyter-core==4.6.3
+jupyterlab==2.0.1
+jupyterlab-server==1.0.7
+kiwisolver==1.1.0
+MarkupSafe==1.1.1
+matplotlib==3.2.1
+mistune==0.8.4
+nbconvert==5.6.1
+nbformat==5.0.4
+notebook==6.0.3
 numpy==1.18.2
+openpyxl==3.0.3
 pandas==1.0.3
+pandocfilters==1.4.2
+parso==0.6.2
+pickleshare==0.7.5
+plotly==4.5.4
+prometheus-client==0.7.1
+prompt-toolkit==3.0.4
+Pygments==2.6.1
+pyparsing==2.4.6
+pyrsistent==0.16.0
 python-dateutil==2.8.1
 pytz==2019.3
+pywin32==227
+pywinpty==0.5.7
+pyzmq==19.0.0
 requests==2.23.0
+retrying==1.3.3
+scikit-learn==0.23.1
+scipy==1.4.1
+Send2Trash==1.5.0
 six==1.14.0
+terminado==0.8.3
+testpath==0.4.4
+threadpoolctl==2.0.0
+tornado==6.0.4
+tqdm==4.46.0
+traitlets==4.3.3
 urllib3==1.25.8
+wcwidth==0.1.9
+webencodings==0.5.1
 wincertstore==0.2
+xgboost==1.1.0
+zipp==3.1.0
